# oop-project

./: .gitignore  CMakeLists.txt  MelodieColaborativa.cpp  MelodieSimpla.cpp  MelodieSimpla.h  README.md  activitate.cpp  album.cpp  autocar.cpp  autocar.h  avion.cpp  avion.h  bodyguard.cpp  bodyguard.h  concert.cpp  evenimente.cpp  exceptii.h  gameplay.cpp  gameplay.h  harta.cpp  harta.h  jucator.cpp  jucator.h  main.cpp  manager2.cpp  manager2.h  melodie.cpp  melodie.h  muzician.cpp  muzician.h  oras.cpp  oras.h  persoana.cpp  producator.cpp  producator.h  tastatura.txt  tehnicianSunet.cpp  transport.cpp  transport.h  trupa.cpp  (+4 more)
include/: MelodieColaborativa.h  MelodieSimpla.h  activitate.h  album.h  autocar.h  avion.h  bazaDateJoc.h  concert.h  evenimente.h  exceptii.h  gameplay.h  inputHandler.h  jucator.h  manager.h  manager2.h  melodie.h  muzician.h  persoana.h  producator.h  tehnicianSunet.h  transport.h  trupa.h  turneu.h  validation.h
src/: MelodieColaborativa.cpp  MelodieSimpla.cpp  activitate.cpp  album.cpp  autocar.cpp  avion.cpp  bodyguard.cpp  concert.cpp  evenimente.cpp  gameplay.cpp  harta.cpp  inputHandler.cpp  jucator.cpp  manager.cpp  melodie.cpp  muzician.cpp  oras.cpp  persoana.cpp  producator.cpp  tehnicianSunet.cpp  transport.cpp  trupa.cpp  turneu.cpp  validation.cpp
