cmake_minimum_required(VERSION 3.30)
project(Poiectpoo)

set(CMAKE_CXX_STANDARD 20)

add_executable(Poiectpoo
        main.cpp
        persoana.cpp
        muzician.cpp
        manager2.cpp
        producator.cpp
        trupa.cpp
        album.cpp
        melodie.cpp
        gameplay.cpp
        concert.cpp
        activitate.cpp
        evenimente.cpp
        turneu.cpp
        bodyguard.cpp
        tehnicianSunet.cpp
        oras.cpp
        transport.cpp
        autocar.cpp
        avion.cpp
        MelodieColaborativa.cpp
        MelodieSimpla.cpp
        jucator.cpp
        validation.cpp
)
